HVAC Backup 2/objects/Division__c.object
<CustomObject>
    <fields>
        <fullName>AIBH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIBH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division_AIBH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AICH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AICH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division_AIDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division_AIH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AISDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AISDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division_AISDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFs_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFS Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_PMS_Reschedule_Percentage__c</fullName>
        <label>CP PMS Reschedule Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Division</relationshipLabel>
        <relationshipName>Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Materials Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopen_Threshold_In_Hours__c</fullName>
        <defaultValue>48</defaultValue>
        <inlineHelpText>In Hours</inlineHelpText>
        <label>Reopen Threshold(In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Division3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket_Assignment__c</fullName>
        <label>Service Ticket Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pincode/Sector Based</fullName>
                </value>
                <value>
                    <fullName>Tag Asset&apos;s CP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Division</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AIH__c</columns>
        <columns>AIBH__c</columns>
        <columns>AICH__c</columns>
        <columns>AIDH__c</columns>
        <columns>AISDH__c</columns>
        <columns>Service_Head__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Division</pluralLabel>
    <recordTypes>
        <fullName>CPSD</fullName>
        <active>true</active>
        <description>Record type not in use, Need to delete</description>
        <label>CPSD</label>
    </recordTypes>
    <recordTypes>
        <fullName>UPSD</fullName>
        <active>true</active>
        <description>Record type not in use, Need to delete</description>
        <label>UPSD</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>